[package]
name = "knewsnotifd"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
env_logger = "0.10.1"
feed-rs = "1.3.0"
log = "0.4.20"
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["full"] }
webhook = "2.1.2"